--- a/AntlrRenpy/AntlrRenpy.csproj
+++ b/AntlrRenpy/AntlrRenpy.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Antlr4.Runtime.Standard" Version="4.13.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ryngine\Ryngine.csproj" />
+  </ItemGroup>
+
 </Project>
