--- a/UnrealBindings/UnrealBindings.vcxproj.filters
+++ b/UnrealBindings/UnrealBindings.vcxproj.filters
@@ -20,6 +20,19 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="..\Ryngine\bin\Release\net9.0\win-x64\native\Ryngine.dll" />
+    <CopyFileToFolders Include="..\Ryngine\bin\Release\net9.0\win-x64\native\Ryngine.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="UnrealBindings.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\Ryngine\bin\Release\net9.0\win-x64\native\Ryngine.dll" />
   </ItemGroup>
 </Project>
