--- a/Ryngine/Ryngine.csproj
+++ b/Ryngine/Ryngine.csproj
@@ -17,4 +17,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.IO.Hashing" Version="9.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RynVM\RynVM.csproj" />
+  </ItemGroup>
 </Project>
